--- a/apps/templates/DecalForm.html
+++ b/apps/templates/DecalForm.html
@@ -2,21 +2,40 @@
     <p class="h4 mb-4 text-center" style="color:red">Bảng Tính Decal</p>
     
 	<div class="form-group">
-		<label for="number01">Chiều cao tem (cm)</label>
-		<input type="text" class="form-control" id="number01" name="amount" placeholder="Chiều cao tem (cm)" required>
+		<label for="material">Chất liệu</label>
+    <select name="D5" class="form-control" id="material" required>
+      <option value="" selected>Chọn chất liệu</option>
+    </select>
 	</div>
+
+	<div class="form-group">
+		<label for="number01">Chiều cao tem (cm)</label>
+		<input type="text" class="form-control" id="number01" name="height" placeholder="Chiều cao tem (cm)" required>
+	</div>
+
 	<div class="form-group">
 		<label for="number02">Chiều rộng tem (cm)</label>
-		<input type="text" class="form-control" id="number02" name="faces" placeholder="Chiều rộng tem (cm)" required>
+		<input type="text" class="form-control" id="number02" name="width" placeholder="Chiều rộng tem (cm)" required>
 	</div>
-  <!-- <div class="form-group">
-    <label for="number02">Số bù hao</label>
-    <select class="form-control" id="number02" name="faces" required>
-      <option>1 mặt</option>
-      <option>2 mặt</option>
-    </select>
-  </div> -->
 
+	<div class="form-group">
+		<label for="quantity">Số lượng</label>
+		<input type="text" class="form-control" id="quantity" name="quantity" placeholder="Số lượng" required>
+	</div>
+
+  <div class="form-group">
+		<label for="faces">Cán màng</label>
+    <select class="form-control" id="faces" name="D12" required>
+      <option value="" selected>Chọn Cán màng</option>
+    </select>
+	</div>
+
+  <div class="form-group">
+		<label for="process">Gia công</label>
+    <select class="form-control" id="process" name="D13" required>
+      <option value="" selected>Chọn Gia công</option>
+    </select>
+	</div>
 
 	<button type="submit" class="btn btn-primary">Gửi đi</button>
   <input class="btn btn-secondary" type="reset" value="Xóa các trường">
