Refactor setValue formObject

--- a/apps/templates/DecalForm.html
+++ b/apps/templates/DecalForm.html
@@ -10,17 +10,17 @@
 
 	<div class="form-group">
 		<label for="number01">Chiều cao tem (cm)</label>
-		<input type="text" class="form-control" id="number01" name="height" placeholder="Chiều cao tem (cm)" required>
+		<input type="text" class="form-control" id="number01" name="D6" placeholder="Chiều cao tem (cm)" required>
 	</div>
 
 	<div class="form-group">
 		<label for="number02">Chiều rộng tem (cm)</label>
-		<input type="text" class="form-control" id="number02" name="width" placeholder="Chiều rộng tem (cm)" required>
+		<input type="text" class="form-control" id="number02" name="D7" placeholder="Chiều rộng tem (cm)" required>
 	</div>
 
 	<div class="form-group">
 		<label for="quantity">Số lượng</label>
-		<input type="text" class="form-control" id="quantity" name="quantity" placeholder="Số lượng" required>
+		<input type="text" class="form-control" id="quantity" name="D8" placeholder="Số lượng" required>
 	</div>
 
   <div class="form-group">
