Update UI Decal Form

--- a/apps/templates/DecalForm.html
+++ b/apps/templates/DecalForm.html
@@ -1,36 +1,36 @@
-<form id="decalForm" class="p-2 border border-light rounded bg-light" onsubmit="handleFormSubmit(this)">
+<form id="decalForm" class="" onsubmit="handleFormSubmit(this)">
     <p class="h4 mb-4 text-center" style="color:red">Bảng Tính Decal</p>
     
-	<div class="form-group">
+	<div class="form-label-group">
 		<label for="material">Chất liệu</label>
     <select name="D5" class="form-control" id="material" required>
       <option value="" selected>Chọn chất liệu</option>
     </select>
 	</div>
 
-	<div class="form-group">
+	<div class="form-label-group">
 		<label for="number01">Chiều cao tem (cm)</label>
 		<input type="text" class="form-control" id="number01" name="D6" placeholder="Chiều cao tem (cm)" required>
 	</div>
 
-	<div class="form-group">
+	<div class="form-label-group">
 		<label for="number02">Chiều rộng tem (cm)</label>
 		<input type="text" class="form-control" id="number02" name="D7" placeholder="Chiều rộng tem (cm)" required>
 	</div>
 
-	<div class="form-group">
+	<div class="form-label-group">
 		<label for="quantity">Số lượng</label>
 		<input type="text" class="form-control" id="quantity" name="D8" placeholder="Số lượng" required>
 	</div>
 
-  <div class="form-group">
+  <div class="form-label-group">
 		<label for="faces">Cán màng</label>
     <select class="form-control" id="faces" name="D12" required>
       <option value="" selected>Chọn Cán màng</option>
     </select>
 	</div>
 
-  <div class="form-group">
+  <div class="form-label-group">
 		<label for="process">Gia công</label>
     <select class="form-control" id="process" name="D13" required>
       <option value="" selected>Chọn Gia công</option>
