--- a/apps/templates/JavaScript.html
+++ b/apps/templates/JavaScript.html
@@ -38,9 +38,35 @@
   function createTable(data) {
     console.log({data});
     if (data && data.success) {
-      document.getElementById("soToIn").innerText = data.soToIn;
-      document.getElementById("buHao").innerText = data.soToCon;
+      $("#soToCon").text(data.soToCon);
+      $("#soToIn").text(data.soToIn);
+
+      // replace pricing
+      let pricing = data.pricing || {};
+      let keys = Object.keys(pricing);
+      keys.forEach((key) => {
+        $(`#${key}`).text(formatMoney(toFloor(pricing[key])));
+      });
     }
+  }
+
+  function toFloor(value) {
+    if (typeof value !== 'number') {
+      return NaN; // Trả về NaN nếu giá trị không phải là số
+    }
+  
+    // Nếu số không có số thập phân, trả về luôn số đó
+    if (Math.floor(value) === value) {
+      return value;
+    }
+  
+    return Math.ceil(value * 100) / 100;
+  }
+
+
+  // format money
+  function formatMoney(value) {
+    return value.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,');
   }
 
   //INITIALIZE FUNCTIONS ONLOAD
